DSTEW-1214 Add support for voiding claims with associated assessments and enhance validation for claim and assessment statuses.
